--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background-color: #d4dbe1;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -36,6 +36,7 @@ a {
 
 header {
   display: flex;
+  background-color: #ffffff;
   margin-top: 20px;
   justify-content: center;
   margin: 20px 5%;
@@ -69,6 +70,9 @@ header {
 
 input, label {
   display: block;
+  margin-left: 1rem;
+  border-radius: 3px;
+  height: 1.2rem;
 }
 
 .subheader {
@@ -84,7 +88,7 @@ button {
   border-radius: 3px;
   border: 0;
   box-shadow: 1px 1px 1px 1px gray;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 
 button:hover {
